kubernetes/postgre-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: postgre
   namespace: winter-space

spec:
  replicas: 1


  selector:
    matchLabels:
      app: postgre


  template:
    metadata:
      labels: 
        app: postgre

    spec:
      containers:

      - name: postgre

        image: postgres:16

        ports:
        - containerPort: 5453
